--- a/views/account_views.xml
+++ b/views/account_views.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
+    <record id="view_account_tax_tree" model="ir.ui.view">
+        <field name="name">account.tax.tree</field>
+        <field name="model">account.tax</field>
+        <field name="arch" type="xml">
+            <tree string="Impuestos" create="false">
+                <field name="display_name" />
+                <field name="type_tax_use" />
+                <field name="tax_group_id" />
+                <field name="price_include" />
+                <field name="l10n_ar_vat_afip_code" />
+                <field name="l10n_ar_tribute_afip_code" />
+            </tree>
+        </field>
+    </record>
+
     <record id="view_move_line_tree_grouped_partner" model="ir.ui.view">
         <field name="name">account.move.line.tree.grouped.partner</field>
         <field name="model">account.move.line</field>
@@ -205,7 +220,8 @@
     <record id="action_configuration_impuestos" model="ir.actions.act_window">
         <field name="name">Impuestos</field>
         <field name="res_model">account.tax</field>
-        <field name="view_mode">list</field>
+        <field name="view_id" ref="view_account_tax_tree" />
+        <field name="view_mode">tree</field>
     </record>
 
     <!-- TODO: Mover a un archivo propio -->
