--- a/views/account_menuitem.xml
+++ b/views/account_menuitem.xml
@@ -80,17 +80,230 @@
         - [Monotributo] mostrar categoria calculada, limite, pago
     -->
 
+    <record id="account_journal_dashboard_kanban_view" model="ir.ui.view">
+        <field name="name">account.journal.kanban</field>
+        <field name="model">account.journal</field>
+        <field name="arch" type="xml">
+            <!-- banner_route="/account/account_dashboard_onboarding"-->
+            <kanban create="false"  
+                class="oe_background_grey o_kanban_dashboard o_account_kanban"
+                js_class="account_dashboard_kanban">
+
+                <field name="id"/>
+                <field name="name"/>
+                <field name="type"/>
+                <field name="color"/>
+                <field name="show_on_dashboard"/>
+                <field name="kanban_dashboard"/>
+                <field name="activity_ids"/>
+                <field name="activity_state"/>
+                <field name="alias_domain"/>
+
+                <templates>
+                    <!-- Template Principal -->
+                    <t t-name="kanban-box">
+                        <div t-attf-class="#{!selection_mode ? kanban_color(record.color.raw_value) : ''}">
+                            <!-- Variables -->
+                            <t t-value="JSON.parse(record.kanban_dashboard.raw_value)" t-set="dashboard"/>
+                            <t t-value="record.type.raw_value" t-set="journal_type"/>
+                            
+                            <!-- Header -->
+                            <t t-call="JournalTop"/>
+                            
+                            <!-- Body -->
+                            <div t-att-class="'container o_kanban_card_content' + (dashboard.is_sample_data ? ' o_sample_data' : '')">
+                                <div class="row">
+                                    <!-- <t t-if="(journal_type == 'bank' || journal_type == 'cash')" t-call="JournalBodyBankCash"/> -->
+                                    <t t-if="journal_type == 'sale' || journal_type == 'purchase'" t-call="JournalBodySalePurchase"/>
+                                    <!-- <t t-if="journal_type == 'general'" t-call="JournalMiscelaneous"/> -->
+                                </div>
+                                <t t-if="journal_type == 'bank' || journal_type == 'cash' || journal_type == 'sale' || journal_type == 'purchase'" t-call="JournalBodyGraph"/>
+                            </div>
+                            
+                            <!-- Dropdown -->
+                            <div class="container o_kanban_card_manage_pane dropdown-menu" role="menu">
+                                <t t-call="JournalManage"/>
+                            </div>
+                        </div>
+                    </t>
+
+                    <t t-name="JournalTop">
+                        <div t-attf-class="o_kanban_card_header">
+                            <div class="o_kanban_card_header_title">
+                                <div class="o_primary">
+                                    <a type="object" name="open_action"><field name="name"/></a>
+                                    <t t-if="dashboard.company_count &gt; 1">
+                                        <span groups="base.group_multi_company" class="small">- <field name="company_id"/></span>
+                                    </t>
+                                </div>
+                                <div class="o_secondary" t-att-title="dashboard.title" t-if="journal_type == 'purchase' &amp;&amp; record.alias_domain.raw_value">
+                                    <field name="alias_id"/>
+                                </div>
+                            </div>
+                            <div class="o_kanban_manage_button_section">
+                                <a class="o_kanban_manage_toggle_button" href="#"><i class="fa fa-ellipsis-v" aria-label="Selection" role="img" title="Selection"/></a>
+                            </div>
+                        </div>
+                    </t>
+
+                    <!-- Dropdown de Opciones -->
+                    <t t-name="JournalManage">
+
+                        <!-- For purchase and sale -->
+                        <!-- TODO: por ahora ninguno es necesario -->
+                        <!-- <div t-if="journal_type == 'purchase' || journal_type == 'sale'" class="row">
+                             <div class="col-4 o_kanban_card_manage_section o_kanban_manage_view">
+                                <div class="o_kanban_card_manage_title">
+                                    <span>View</span>
+                                </div>
+                                <div>
+                                    <a t-if="journal_type == 'sale'" type="object" name="open_action" context="{'action_name': 'action_move_out_invoice_type'}">Invoices</a>
+                                    <a t-if="journal_type == 'purchase'" type="object" name="open_action" context="{'action_name': 'action_move_in_invoice_type'}">Bills</a>
+                                </div>
+                                <div id="sale_purchase_refund">
+                                    <a t-if="journal_type == 'sale'" type="object" name="open_action" context="{'action_name': 'action_move_out_refund_type'}">Credit Notes</a>
+                                    <a t-if="journal_type == 'purchase'" type="object" name="open_action" context="{'action_name': 'action_move_in_refund_type'}">Refund</a>
+                                </div>
+                                <div>
+                                    <a type="object" name="open_action" context="{'action_name': 'action_account_moves_all_a'}" groups="base.group_no_one">Journal Items</a>
+                                </div>
+                            </div>
+
+                             <div class="col-4 o_kanban_card_manage_section o_kanban_manage_new" groups="account.group_account_invoice">
+                                <div class="o_kanban_card_manage_title">
+                                    <span>New</span>
+                                </div>
+                                <div>
+                                    <a type="object" name="action_create_new">
+                                        <span t-if="journal_type == 'sale'">Invoice</span>
+                                        <span t-if="journal_type == 'purchase'">Bill</span>
+                                    </a>
+                                </div>
+                                <div>
+                                    <a type="object" name="action_create_new" context="{'refund':True}">
+                                        <span t-if="journal_type == 'sale'">Credit Note</span>
+                                        <span t-if="journal_type == 'purchase'">Refund</span>
+                                    </a>
+                                </div>
+                                <div t-if="journal_type == 'sale'">
+                                    <a class="o_button_upload_bill" journal_type="sale" groups="account.group_account_invoice">
+                                        <span>Upload Invoices</span>
+                                    </a>
+                                </div>
+                            </div>
+
+                             <div class="col-4 o_kanban_card_manage_section o_kanban_manage_reports">
+                                <div class="o_kanban_card_manage_title">
+                                    <span>Reporting</span>
+                                </div>
+                                <div>
+                                    <a t-if="journal_type == 'sale'" type="action" name="246" groups="account.group_account_readonly">Invoices Analysis</a>
+                                    <a t-if="journal_type == 'purchase'" type="action" name="245" groups="account.group_account_readonly">Bills Analysis</a>
+                                </div>
+                            </div>
+                        </div> -->
+
+                        <!-- Color Picker -->
+                        <div t-if="widget.editable" class="o_kanban_card_manage_settings row">
+                            <div class="col-8">
+                                <ul class="oe_kanban_colorpicker" data-field="color"/>
+                            </div>
+                        </div>
+
+                        <!-- Opciones "Eliminar de favoritos" y "Configuration" -->
+                        <!-- <div groups="account.group_account_manager" class="row o_kanban_card_settings">
+                            <div class="col-6">
+                                <field name="show_on_dashboard" widget="boolean_favorite"/>
+                            </div>
+                            <div class="col-6 text-right mt-1">
+                                <a class="dropdown-item" t-if="widget.editable" type="edit">Configuration</a>
+                            </div>
+                        </div> -->
+                    </t>
+
+                    <t t-name="JournalBodySalePurchase" id="account.JournalBodySalePurchase">
+                        <div class="col-12 col-sm-5 mb-3 mb-sm-0 o_kanban_primary_left">
+                            <t t-if="journal_type == 'sale'">
+                                <button type="object" name="action_create_new" class="btn btn-primary o_invoice_new" groups="account.group_account_invoice">
+                                    <span>Nuevo</span>
+                                </button>
+                            </t>
+                            <t t-if="journal_type == 'purchase'">
+                                <button class="btn btn-primary o_button_upload_bill oe_kanban_action_button" journal_type="purchase" groups="account.group_account_invoice">
+                                    <span>Importar</span>
+                                </button>
+                                <a type="object" name="action_create_new" class="o_invoice_new" groups="account.group_account_invoice"><span>Crear</span></a><span> manual</span>
+                            </t>
+                        </div>
+                        <div class="col-12 col-sm-7 o_kanban_primary_right">
+                            <div class="row" t-if="dashboard.number_draft">
+                                <div class="col overflow-hidden text-left">
+                                    <a type="object" name="open_action" context="{'search_default_draft': '1'}">
+                                        <span title="Comprobantes en Borrador"><t t-esc="dashboard.number_draft"/> Comprobantes en Borrador</span>
+                                        <!-- <span t-if="journal_type == 'purchase'" title="Bills to Validate"><t t-esc="dashboard.number_draft"/>Comprobantes en Borrador</span> -->
+                                    </a>
+                                </div>
+                                <div class="col-auto text-right">
+                                    <span><t t-esc="dashboard.sum_draft"/></span>
+                                </div>
+                            </div>
+                            
+                            <!-- TODO: comprobantes a pagar -->
+                            <!-- <div class="row" t-if="dashboard.number_waiting">
+                                <div class="col overflow-hidden text-left">
+                                    <a type="object" t-if="journal_type == 'sale'" name="open_action" context="{'search_default_unpaid':1, 'search_default_posted':1, 'search_default_partial': 1}" id="account_dashboard_sale_pay_link">
+                                        <t t-esc="dashboard.number_waiting"/> Unpaid Invoices
+                                    </a>
+
+                                    <a type="object" t-if="journal_type == 'purchase'" name="open_action" context="{'search_default_unpaid':1, 'search_default_posted':1, 'search_default_partial': 1}" id="account_dashboard_purchase_pay_link">
+                                        <t t-esc="dashboard.number_waiting"/> Bills to Pay
+                                    </a>
+                                </div>
+                                <div class="col-auto text-right">
+                                    <span><t t-esc="dashboard.sum_waiting"/></span>
+                                </div>
+                            </div> -->
+
+                            <!-- Comprobantes para revisar -->
+                            <t t-if="dashboard.number_to_check &gt; 0">
+                                <div class="row">
+                                    <div class="col overflow-hidden text-left">
+                                        <a type="object" name="open_action" context="{'search_default_to_check': True}"><t t-esc="dashboard.number_to_check"/> para revisar</a>
+                                    </div>
+                                    <div class="col-auto text-right">
+                                        <span><t t-esc="dashboard.to_check_balance"/></span>
+                                    </div>
+                                </div>
+                            </t>
+                        </div>
+                    </t>
+
+                    <!-- Grafico de compras/ventas -->
+                    <t t-name="JournalBodyGraph">
+                        <field name="kanban_dashboard_graph" t-att-graph_type="_.contains(['cash','bank'],journal_type) ? 'line' : 'bar'" widget="dashboard_graph"/>
+                    </t>
+
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
     <record id="open_account_journal_dashboard_kanban" model="ir.actions.act_window">
         <field name="name">Accounting Dashboard</field>
         <field name="res_model">account.journal</field>
         <field name="view_mode">kanban,form</field>
-        <field name="view_id" ref="account.account_journal_dashboard_kanban_view"/>
+        <field name="view_id" ref="account_journal_dashboard_kanban_view"/>
         <field name="usage">menu</field>
         <field name="context">{'search_default_dashboard':1}</field>
-        <field name="domain">[]</field>
+        <!-- TODO: Deshabilitar ventas preimpreso al crear journals, 
+        y cambiar nombre al de proveedores -->
+        <field name="domain">[
+            ('type', 'in', ['sale', 'purchase']),
+            ('name', '!=', 'Ventas Preimpreso'),
+        ]</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_neutral_face">
-                This is the accounting dashboard
+                <!-- This is the accounting dashboard -->
             </p>
         </field>
     </record>
@@ -232,12 +445,12 @@
             <!-- <menuitem name="Importar AFIP" sequence="1"
                 id="menu_import_afip" action="action_arba_afip_upload"/> -->
 
-            <!-- TODO -->
             <!-- MENU Facturacion/Importar/Compras/Comprobantes Emitidos  -->
             <menuitem name="Mis Comprobantes Recibidos" sequence="1" 
                 id="menu_import_purchases_comp_recibidos" action="action_import_purchases_comp_recibidos" />
                 
-            <menuitem name="RG3685 (IVA Digital)" sequence="3" 
+            <!-- MENU Facturacion/Importar/Compras/RG 3685  -->
+            <menuitem name="RG 3685 (IVA Digital)" sequence="3" 
                 id="menu_import_purchases_rg3685" action="action_import_purchase_rg3685" />
 
             <!-- <menuitem name="Archivo Excel" sequence="4" 
@@ -262,14 +475,15 @@
             <!-- <menuitem name="[RevisarNombre] Retenciones AFIP" sequence="9" 
                 id="menu_import_sale_rg3685" action="action_wizard_import_sale_pem" /> -->
 
-            <menuitem name="RG3685 (IVA Digital)" sequence="3" 
-                id="menu_import_sale_rg3685" action="action_import_sale_rg3685" />
-
 
             <!-- MENU Facturacion/Importar/Controlador Fiscal (*.PEM) -->
-            <menuitem name="Controlador Fiscal (*.PEM)" sequence="4" 
+            <menuitem name="Controlador Fiscal (*.PEM)" sequence="3" 
                 id="menu_import_sale_pem" action="action_wizard_import_sale_pem" />
             
+            <!-- MENU Facturacion/Importar/RG 3685 -->
+            <menuitem name="RG 3685 (IVA Digital)" sequence="4" 
+                id="menu_import_sale_rg3685" action="action_import_sale_rg3685" />
+
             <!-- MENU Facturacion/Importar/Archivo Excel -->
             <!-- <menuitem name="Archivo Excel" sequence="6" 
                 id="menu_import_sale_excel" action="action_import_sale_excel" /> -->
