--- a/views/account_menuitem.xml
+++ b/views/account_menuitem.xml
@@ -289,7 +289,7 @@
     </record>
 
     <record id="open_account_journal_dashboard_kanban" model="ir.actions.act_window">
-        <field name="name">Accounting Dashboard</field>
+        <field name="name">Dashboard</field>
         <field name="res_model">account.journal</field>
         <field name="view_mode">kanban,form</field>
         <field name="view_id" ref="account_journal_dashboard_kanban_view"/>
@@ -319,6 +319,8 @@
         <menuitem id="menu_action_move_out_invoice_type" name="Comprobantes Emitidos" action="action_move_out_invoice_type" sequence="1"/>
         <!-- <menuitem id="menu_action_account_payments_receivable" action="action_account_payments" sequence="15"/> -->
         <!-- <menuitem id="product_product_menu_sellable" name="Productos" action="account.product_product_action_sellable" sequence="100"/> -->
+
+        <!-- TODO: mejorar esta vista -->
         <menuitem id="menu_account_customer" name="Clientes" action="account.res_partner_action_customer" sequence="110"/>
     </menuitem>
 
@@ -328,6 +330,8 @@
         <!-- TODO: Los proveedores no pueden ser compartidos. Aparecen todos los proveedores al momento de crear una factura -->
         <!-- <menuitem id="menu_action_account_payments_payable" action="action_account_payments_payable" sequence="20"/> -->
         <!-- <menuitem id="product_product_menu_purchasable" name="Productos" action="account.product_product_action_purchasable" sequence="100"/> -->
+
+        <!-- TODO: mejorar esta vista -->
         <menuitem id="menu_account_supplier" name="Proveedores" action="account.res_partner_action_supplier" sequence="200"/>
     </menuitem>
 
@@ -652,6 +656,9 @@
         <!-- TODO: hacer readonly -->
         <menuitem id="menu_configuration_grupo_impuestos" name="Grupos de Impuestos" 
             sequence="4" action="action_configuration_grupo_impuestos" />
+
+        <menuitem id="menu_admin_import_pem" name="Archivos PEM Importados" 
+            sequence="5" action="action_admin_import_pem" />
 
     </menuitem>
 
