--- a/views/sales_views.xml
+++ b/views/sales_views.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
+    <!-- Expandir GroupBy por defecto -->
+    <!-- TODO: esto no esta andando -->
+    <record id="account_invoice_groupby_inherit" model="ir.ui.view">
+        <field name="name">account.move.groupby</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_account_invoice_filter"/>
+        <field name="arch" type="xml">
+            <group position="attributes">
+                <attribute name="expand">1</attribute>
+            </group>
+        </field>
+    </record>
+
     <record id="view_invoice_tree" model="ir.ui.view">
         <field name="name">account.invoice.tree</field>
         <field name="model">account.move</field>
         <field name="arch" type="xml">
-            <tree string="Invoices" class="w-150" js_class="account_tree" sample="1">
+            <tree string="Invoices" class="w-150" js_class="account_tree" sample="1"
+                default_order="invoice_date desc">
                 <!-- <header>
                     <button name="action_register_payment" type="object" string="Register Payment"
                         groups="account.group_account_user"
@@ -65,7 +79,11 @@
         <!-- TODO: cambiar search view por filtros particulares -->
         <field name="search_view_id" ref="account.view_account_invoice_filter"/>
         <field name="domain">[('move_type', 'in', ['in_invoice', 'in_refund'])]</field>
-        <field name="context">{'default_move_type': 'in_invoice'}</field>
+        <field name="context">
+        {
+            'default_move_type': 'in_invoice',
+            'search_default_invoicedate': 'month'
+        }</field>
         <!-- TODO: add this -->
         <!-- <field name="help" type="html">
         <p class="o_view_nocontent_smiling_face">
@@ -84,7 +102,15 @@
         <!-- TODO: cambiar search view por filtros particulares -->
         <field name="search_view_id" ref="account.view_account_invoice_filter"/>
         <field name="domain">[('move_type', 'in', ['out_invoice', 'out_refund'])]</field>
-        <field name="context">{'default_move_type': 'out_invoice'}</field>
+        <!-- Ordenar por mes y luego por tipo de comprobante -->
+        <field name="context">
+        {
+            'default_move_type': 'out_invoice',
+            'search_default_invoicedate': 'month',
+            'search_default_l10n_latam_document_type': 'z'
+        }
+        </field>
+
         <!-- TODO: add this -->
         <!-- <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
