--- a/wizard/import_afip_retenciones.xml
+++ b/wizard/import_afip_retenciones.xml
@@ -37,7 +37,7 @@
                     <field name="file" />
                 </group>
 
-                <notebook string="Retenciones Cargadas" col="2">
+                <notebook col="2">
                     <page string="Retenciones">
                         <field name="invoice_ids" nolabel="1" widget="section_and_note_one2many" options="{'reload_on_button': true}">
                             <tree>
@@ -48,7 +48,7 @@
                                 <field name="impuesto" edit="false" />
                                 <field name="regimen" edit="false" />
                                 <field name="descripcion" edit="false" />
-                                <field name="total" edit="false" />
+                                <field name="total" edit="false" sum="Total" />
                                 <field name="numero_comprobante" edit="false" />
                                 <field name="descripcion_cbte" edit="false" />
                                 <field name="date_registered" edit="false" />
