--- a/wizard/import_purchase_comprecibidos.xml
+++ b/wizard/import_purchase_comprecibidos.xml
@@ -35,7 +35,10 @@
                         <field name="invoice_ids" widget="section_and_note_one2many" options="{'reload_on_button': true}">
                             <tree 
                                 default_order="invoice_found, vendor, date"
-                                decoration-success="total == invoice_amount_total">
+                                decoration-success="match_total_amount">
+                                
+                                <field name="match_total_amount" invisible="1" />
+
                                 <field name="invoice_found" />
                                 <field name="date" edit="false" />
                                 <field name="cuit" />
