Copia de variables scss

--- a/templates/basic.xml
+++ b/templates/basic.xml
@@ -1,5 +1,13 @@
 <odoo>
+
     <data>
+
+        <template id="_assets_primary_variables" inherit_id="web._assets_primary_variables">
+            <xpath expr="//link[last()]" position="replace">
+                <link rel="stylesheet" type="text/scss" href="/pyme_accounting/static/src/scss/primary_variables.scss"/>
+            </xpath>
+        </template>
+
         <!-- Este anda bien -->
         <!-- <template id="base_template_id">
 
