--- a/templates/basic.xml
+++ b/templates/basic.xml
@@ -8,6 +8,12 @@
             </xpath>
         </template>
 
+        <template id="assets_backend" inherit_id="web.assets_common">
+            <xpath expr="//script[last()]" position="after">
+                <script type="text/javascript" src="/pyme_accounting/static/src/js/session.js"></script>
+            </xpath>
+        </template>
+
         <!-- Este anda bien -->
         <!-- <template id="base_template_id">
 
