--- a/views/account_views.xml
+++ b/views/account_views.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
+    <!-- Listado de Impuestos -->
     <record id="view_account_tax_tree" model="ir.ui.view">
         <field name="name">account.tax.tree</field>
         <field name="model">account.tax</field>
@@ -16,6 +17,7 @@
         </field>
     </record>
 
+    <!-- Libro Mayor / Cuenta Corriente -->
     <record id="view_move_line_tree_grouped_partner" model="ir.ui.view">
         <field name="name">account.move.line.tree.grouped.partner</field>
         <field name="model">account.move.line</field>
