--- a/wizard/import_purchase_comprecibidos.xml
+++ b/wizard/import_purchase_comprecibidos.xml
@@ -2,83 +2,151 @@
 <odoo>
 
     <!-- IMPORTAR COMPROBANTES RECIBIDOS - FORM VIEW -->
+    <record id="view_wizard_import_purchases_comp_recibidos_line_form" model="ir.ui.view">
+        <field name="name">l10n_ar.import.purchase.comprecibidos.line.form</field>
+        <field name="model">l10n_ar.import.purchase.comprecibidos.line</field>
+        <field name="arch" type="xml">
+            <form>
+                <field name="match_total_amount" invisible="1" />
+
+                <group col="2">
+                    <field name="date" edit="false" />
+                    <field name="cuit" edit="false" />
+                    <field name="vendor" edit="false" />
+                    <field name="invoice_display_name" />
+                </group>
+
+                <group col="4">
+                    <field name="taxed_amount" />
+                    <field name="invoice_amount_total_taxed" />
+
+                    <field name="untaxed_amount" />
+                    <field name="invoice_amount_total_untaxed" />
+                    
+                    <field name="exempt_amount" />
+                    <field name="invoice_amount_total_exempt" />
+
+                    <field name="iva_type" />
+                    <newline />
+
+                    <field name="iva" />
+                    <field name="invoice_amount_total_tax" />
+                    
+                    <field name="difference" />
+                    <newline />
+                    
+                    <field name="total" />
+                    <field name="invoice_amount_total" decoration-success="match_total_amount" />
+                </group>
+
+            </form>
+        </field>
+    </record>
+
+    <!-- IMPORTAR COMPROBANTES RECIBIDOS - FORM VIEW -->
     <record id="view_wizard_import_purchases_comp_recibidos_form" model="ir.ui.view">
         <field name="name">l10n_ar.import.purchase.comprecibidos.form</field>
         <field name="model">l10n_ar.import.purchase.comprecibidos</field>
         <field name="arch" type="xml">
             <form>
                 
-                <!-- <p><b>NOTA: La diferencia entre el monto total y los otros importes detallados a continuación, serán cargados como monto no gravado. Estos montos en general suelen corresponder a percepciones aplicadas al comprobante, y pueden ser modificadas desde Importar - IIBB - Deducciones</b></p> -->
+                <div attrs="{'invisible': [('display_button_generate', '=', True)]}">
 
-                <!-- <div class="card bg-primary">
-                    <div class="card-body">
-                        <p>Existen 2 tipos de archivos que pueden ser importados:</p>
-                        <ul>
-                            <li>F8010: importar comprobantes individuales.</li>
-                            <li>F8011: importar comprobantes Z</li>
-                        </ul>
-                        <p>Por el momento, el sistema solo permite importar el archivo F8011.</p>
-                        <p>Se generará un comprobante por cada Z, comúnmente generado al finalizar cada día.</p>
+                    <div class="card bg-primary">
+                        <div class="card-body">
+                            <p>Con este asistente, podés cargar los comprobantes recibidos que figuran en AFIP, 
+                            en la sección <b>Mis Comprobantes</b></p>
+                            <p>El archivo tiene que ser descargado en formato .csv</p>
+                            <p>Los comprobantes cargados se mostrarán a continuación ordenados por proveedor (alfabéticamente) y por fecha.</p>
+                            <p>Los comprobantes ya cargados en el sistema aparecerán en la lista, indicando si coinciden con los valores cargados previamente, pero no se importarán nuevamente ni se modificarán los comprobantes ya existentes.</p>
+                        </div>
                     </div>
-                </div> -->
 
-                <group string="Archivo" col="2">
+                    <group string="Archivo" col="2">
+                        <field name="file" />                
+                    </group>
 
-                    <field name="file" />
-                
-                </group>
+                </div>
 
-                <separator string="Datos Cargados" />
-                <notebook>
-                    <page string="Facturas">
+                <div attrs="{'invisible': [('display_button_generate', '=', False)]}">
+                    <div class="card bg-primary">
+                        <div class="card-body">
+                            <p><b>NOTA: La diferencia entre el monto total y los otros importes detallados a continuación, serán cargados como monto no gravado.</b></p>
+                            <p>Estos montos en general suelen corresponder a percepciones aplicadas al comprobante, y luego pueden ser modificadas desde el menú Importar - IIBB - Deducciones</p>
+                        </div>
+                    </div>
 
-                        <field name="invoice_ids" widget="section_and_note_one2many" options="{'reload_on_button': true}">
-                            <tree 
-                                default_order="invoice_found, vendor, date"
-                                decoration-success="match_total_amount">
-                                
-                                <field name="match_total_amount" invisible="1" />
+                    <separator string="Datos Cargados" />
 
-                                <field name="invoice_found" />
-                                <field name="date" edit="false" />
-                                <field name="cuit" />
-                                <field name="vendor" />
-                                <field name="invoice_display_name" />
-                                <field name="taxed_amount" />
-                                <field name="untaxed_amount" />
-                                <field name="exempt_amount" />
-                                <field name="iva_type" />
-                                <field name="iva" />
-                                <field name="difference" />
-                                <field name="total" />
-                                <field name="invoice_amount_total" />
-                            </tree>
-                        </field>
-                    </page>
+                    <notebook>
+                        <page string="Facturas">
 
-                    <page string="Otras facturas">
-                        <field name="existing_invoice_ids" nolabel="1" widget="section_and_note_one2many" options="{'reload_on_button': true}">
-                            <tree default_order="invoice_partner_display_name, name">
-                                <field name="state" invisible="1" />
+                            <field name="invoice_ids" widget="section_and_note_one2many" options="{'reload_on_button': true}">
+                                <tree 
+                                    default_order="invoice_found, vendor, date"
+                                    decoration-success="match_all"
+                                    >
+                                    
+                                    <!-- TODO: mostrar estado de importacion, y dialogo
+                                    con ayuda de simbolos + ordenamiento -->
+                                    <!-- TODO: retornar a comprobantes emitidos y ver de notificar success -->
+                                    <!-- TODO: ver facturas del mismo periodo y descargar -->
+                                    <!-- TODO: cambiar width del proveedor -->
+                                    <!-- TODO: convertir a monetary -->
+                                    <!-- TODO: calcular warnings de mismatch. 
+                                        - Traerse el fix de price_include
+                                        - Si existe el comprobante no importar de vuelta
+                                    -->
 
-                                <field name="date" />
-                                <field name="name" />
-                                <field name="cuit" />
-                                <field name="invoice_partner_display_name" />
-                                <field name="display_amount_taxed" sum="Total" />
-                                <field name="display_amount_untaxed" sum="Total" />
-                                <field name="display_amount_exempt" sum="Total" />
-                                <field name="display_amount_total" sum="Total" />
-                            </tree>
-                        </field>
-                    </page>
-                </notebook>
+                                    <field name="match_all" invisible="1" /> 
+                                    <field name="match_total_amount" invisible="1" />
+                                    <field name="invoice_found" invisible="1" />
+
+                                    <field name="date" edit="false" />
+                                    <field name="cuit" />
+                                    <!-- todo: minimo width para este campo -->
+                                    <field name="vendor" />
+                                    <!-- todo: minimo width para este campo -->
+                                    <field name="invoice_display_name" />
+                                    <field name="taxed_amount" />
+                                    <field name="untaxed_amount" />
+                                    <field name="exempt_amount" />
+                                    <!-- TODO: usar este campo -->
+                                    <field name="iva_type" />
+                                    <field name="iva" />
+                                    <field name="difference" />
+                                    <field name="total" decoration-success="match_total_amount" />
+                                </tree>
+                            </field>
+                        </page>
+
+                        <page string="Otras facturas">
+                            <field name="existing_invoice_ids" nolabel="1" widget="section_and_note_one2many" options="{'reload_on_button': true}">
+                                <tree default_order="invoice_partner_display_name, name">
+                                    <field name="state" invisible="1" />
+
+                                    <field name="date" />
+                                    <field name="name" />
+                                    <field name="cuit" />
+                                    <field name="invoice_partner_display_name" />
+                                    <field name="display_amount_taxed" sum="Total" />
+                                    <field name="display_amount_untaxed" sum="Total" />
+                                    <field name="display_amount_exempt" sum="Total" />
+                                    <field name="display_amount_total" sum="Total" />
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
+
+                    <field name="display_button_generate" invisible="1" />
+
+                </div>
 
                 <footer>
-                    <!-- TODO: convertir a action -->
-                    <button name="compute" string="Cargar" type="object" class="btn-primary" />
-                    <button name="generate" string="Generar Facturas" type="object" class="btn-primary" /> 
-                        <!-- TODO attrs="{'invisible': [('loaded', '=', True)]}" /> -->
+                    <button name="compute" string="Cargar" type="object" class="btn-primary" 
+                        attrs="{'invisible': [('display_button_generate', '=', True)]}" />
+                    <button name="generate" string="Generar Comprobantes" type="object" class="btn-primary" 
+                        attrs="{'invisible': [('display_button_generate', '=', False)]}" /> 
                     <button string="Cancelar" class="btn-secondary" special="cancel"/>
                 </footer>
             </form>
